<resources>
    <string name="app_name">De Best Calculator You Have Ever Seen. Mamoy klyanus</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="oper_C">C</string>
    <string name="oper_eq">=</string>
    <string name="oper_sum">+</string>
    <string name="oper_dif">-</string>
    <string name="oper_mul">*</string>
    <string name="oper_div">/</string>
    <string name="default_expression">0</string>

</resources>
