<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/number_0"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_0" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/oper_C"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_1" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintBottom_toTopOf="@+id/oper_C"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_2" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/number_1"
            app:layout_constraintBottom_toTopOf="@+id/number_0" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_3" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/number_2"
            app:layout_constraintBottom_toTopOf="@+id/oper_eq" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_4" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintBottom_toTopOf="@+id/number_1"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_5" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/number_4"
            app:layout_constraintBottom_toTopOf="@+id/number_2" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_6" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/number_5"
            app:layout_constraintBottom_toTopOf="@+id/number_3" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_7" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/number_4" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_8" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/number_7"
            app:layout_constraintBottom_toTopOf="@+id/number_5" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/number_9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/number_9" android:background="@color/buttonBackgroundMainPad"
            app:layout_constraintStart_toEndOf="@+id/number_8"
            app:layout_constraintBottom_toTopOf="@+id/number_6" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/oper_C"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/oper_C" android:background="@color/buttonBackgroundOperPad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/oper_eq"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/oper_eq" android:background="@color/buttonBackgroundOperPad"
            app:layout_constraintStart_toEndOf="@+id/number_0"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/oper_sum"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/oper_sum" android:background="@color/buttonBackgroundOperPad"
            app:layout_constraintStart_toEndOf="@+id/number_9"
            app:layout_constraintBottom_toTopOf="@+id/oper_dif"
            android:textSize="30sp" android:textColor="@color/buttonText"
            android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/oper_dif"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/oper_dif" android:background="@color/buttonBackgroundOperPad"
            app:layout_constraintStart_toEndOf="@+id/number_6"
            app:layout_constraintBottom_toTopOf="@+id/oper_mul" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/oper_mul"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/oper_mul" android:background="@color/buttonBackgroundOperPad"
            app:layout_constraintStart_toEndOf="@+id/number_3"
            app:layout_constraintBottom_toTopOf="@+id/oper_div" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
    <Button
            android:text="@string/oper_div"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/oper_div" android:background="@color/buttonBackgroundOperPad"
            app:layout_constraintStart_toEndOf="@+id/oper_eq"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="30sp"
            android:textColor="@color/buttonText" android:fontFamily="sans-serif-thin"
            android:typeface="normal"/>
</android.support.constraint.ConstraintLayout>